--- a/examples/index.html
+++ b/examples/index.html
@@ -28,6 +28,7 @@
     y.set("category", "Football Boots");
     y.set("product", "FC247 Elastico Finale II Men's Indoor-Competition Football Boot");
     y.set("sku", "580457 - 007");
+    // y.debug = true;
   </script>
 </body>
 </html>
