--- a/test/test.y.html
+++ b/test/test.y.html
@@ -13,10 +13,12 @@
         this.data[name] = value;
       }
     }
+    y.set("advertiser_id", 7);
+    y.set("country", "GR");
   </script>
+  <script src="../lib/y.js"></script>
   <script src="../node_modules/chai/chai.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
-  <script src="../lib/y.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="test.y.js"></script>
   <script>
