--- a/examples/index.html
+++ b/examples/index.html
@@ -6,22 +6,23 @@
   <title>Yieldr Pixel</title>
 </head>
 <body>
-  <script type="text/javascript">
-    (function (window, document, src) {
-      window.y = window.y || {
+  <script type = "text/javascript">
+    (function (y, l, d, r) {
+      y['YieldrTrackingObject'] = r;
+      y[r] = y[r] || {
         data: {},
         set: function (name, value) {
           this.data[name] = value;
         }
       };
-      if (!y.loaded) {
-        var elem = document.createElement("script");
-        elem.async = true;
-        elem.src = src;
-        document.head.appendChild(elem);
-        y.loaded = true;
+      if (!y[r].loaded) {
+        var s = l.createElement("script");
+        s.async = true;
+        s.src = d;
+        l.head.appendChild(s);
+        y[r].loaded = true;
       }
-    })(window, document, "/y.js");
+    })(window, document, "/y.js", "y");
 
     y.set("advertiser_id", 7);
     y.set("country", "GR");
