--- a/examples/index.html
+++ b/examples/index.html
@@ -22,7 +22,7 @@
         l.head.appendChild(s);
         y[r].loaded = true;
       }
-    })(window, document, "/y.js", "y");
+    })(window, document, "../lib/y.js", "y");
 
     y.set("advertiser_id", 7);
     y.set("country", "GR");
