fixed tag for IE8 and using apply() for calling functions

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -19,13 +19,13 @@
         data: {},
         set: function(name, value) {
           this.data[name] = value;
-        },
-      }
+        }
+      };
       if (!y[r].loaded) {
         var s = l.createElement("script");
         s.async = true;
         s.src = d;
-        l.head.appendChild(s);
+        l.getElementsByTagName("head")[0].appendChild(s);
         y[r].loaded = true;
       }
     })(window, document, "../../lib/y.js", "y");
