RTB-161 enhancements to the event and data layer features

--- a/examples/data-layer/index.html
+++ b/examples/data-layer/index.html
@@ -46,7 +46,7 @@
     };
 
     y.set("advertiser_id", 7);
-    y.set("_dl", [dl, {foo: "a.b.c", bar: "a.b", baz: "a.bb"}, false]);
+    y.set("_dl", [dl, {foo: "a.b.c", bar: "a.b", baz: "a.bb", bazinga: "z.xy"}, false]);
   </script>
 </body>
 </html>
