--- a/examples/event/index.html
+++ b/examples/event/index.html
@@ -30,7 +30,7 @@
     })(window, document, "../../lib/y.js", "y");
 
     y.set("advertiser_id", 7);
-    y.set("_elem", ["a#submit", "click"]);
+    y.set("_elem", ["a#submit", "click", null, ['id', 'href']]);
   </script>
 </body>
 </html>
