--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,7 @@
     <li><a href="basic/">Basic usage</a></li>
     <li><a href="event/">Events</a></li>
     <li><a href="data-layer/">Data Layer</a></li>
+    <li><a href="basic?cute=puppies&utm_source=google&utm_medium=cpc&utm_campaign=spaceships">Basic usage</a></li>
   </ul>
 </body>
 </html>
