working on some structural changes

--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -28,7 +28,7 @@
         l.getElementsByTagName("head")[0].appendChild(s);
         y[r].loaded = true;
       }
-    })(window, document, "../../lib/y.js", "y");
+    })(window, document, "//cdn.254a.com/static/y.v0.9.0-n.min.js", "y");
 
     y.set("advertiser_id", 7);
   </script>
