--- a/examples/data-layer/index.html
+++ b/examples/data-layer/index.html
@@ -25,7 +25,7 @@
         var s = l.createElement("script");
         s.async = true;
         s.src = d;
-        l.head.appendChild(s);
+        l.getElementsByTagName("head")[0].appendChild(s);
         y[r].loaded = true;
       }
     })(window, document, "../../lib/y.js", "y");
