--- a/test/test.custom.html
+++ b/test/test.custom.html
@@ -22,7 +22,7 @@
     yieldr.set("foo", "bar");
   </script>
   <script src="../lib/y.js"></script>
-  <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/expect.js/index.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="test.custom.js"></script>
