--- a/test/test.y.html
+++ b/test/test.y.html
@@ -17,7 +17,7 @@
     }
   </script>
   <script src="../lib/y.js"></script>
-  <script src="../node_modules/chai/chai.js"></script>
+  <script src="../node_modules/expect.js/index.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="test.y.js"></script>
