--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -32,5 +32,7 @@
 
     y.set("advertiser_id", 7);
   </script>
+
+  <a href="javascript:!function(){var a=window[window.YieldrTrackingObject]||null;a.callback=function(a){for(var b=a.data.cases,c=0;c<b.length;c++){var d=b[c],e=new XMLHttpRequest;e.open('GET','https://my.yieldr.com/api/case-test/'+d,!0),e.setRequestHeader('Authorization','Basic '+btoa('chucknorris:dontneedone')),e.send()}},a.track()}();">Yieldr | Pixel Test</a>
 </body>
 </html>
