ported entirely to composable modules

--- a/examples/data-layer/index.html
+++ b/examples/data-layer/index.html
@@ -28,7 +28,7 @@
         l.getElementsByTagName("head")[0].appendChild(s);
         y[r].loaded = true;
       }
-    })(window, document, "../../lib/y.js", "y");
+    })(window, document, "/y.js", "y");
 
     var dl = {
       a: {
