--- a/examples/index.html
+++ b/examples/index.html
@@ -10,7 +10,9 @@
   <ul>
     <li><a href="basic/">Basic usage</a></li>
     <li><a href="data-layer/">Data Layer</a></li>
-    <li><a href="basic?cute=puppies&utm_source=google&utm_medium=cpc&utm_campaign=spaceships">UTM parameters</a></li>
+    <li><a href="basic/?cute=puppies&utm_source=google&utm_medium=cpc&utm_campaign=spaceships">UTM parameters</a></li>
+    <li><a href="frames/">Frames</a></li>
+    <li><a href="v2/">v2</a></li>
   </ul>
 </body>
 </html>
