--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -28,7 +28,7 @@
         l.getElementsByTagName("head")[0].appendChild(s);
         y[r].loaded = true;
       }
-    })(window, document, "/y.js", "y");
+    })(window, document, "/y1.js", "y");
 
     y.set("advertiser_id", 7);
   </script>
