introduced advanced ab testing concept from @jasper

--- a/test/test.y.html
+++ b/test/test.y.html
@@ -32,7 +32,7 @@
         window.mochaResults.reports = report;
       });
 
-      runner.on(function(test, err){
+      runner.on('fail', function(test, err){
           var flatten = function(test){
             var titles = [];
             while (test.parent.title){
