--- a/test/test.custom.html
+++ b/test/test.custom.html
@@ -37,7 +37,7 @@
         window.mochaResults.reports = report;
       });
 
-      runner.on(function(test, err){
+      runner.on('fail', function(test, err){
           var flatten = function(test){
             var titles = [];
             while (test.parent.title){
