--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,7 @@
   <h1>Yieldr Pixel - Index</h1>
   <ul>
     <li><a href="basic/">Basic usage</a></li>
+    <li><a href="ab-test/">Advanced A/B Testing</a></li>
     <li><a href="data-layer/">Data Layer</a></li>
     <li><a href="basic?cute=puppies&utm_source=google&utm_medium=cpc&utm_campaign=spaceships">UTM parameters</a></li>
   </ul>
