--- a/examples/data-layer/index.html
+++ b/examples/data-layer/index.html
@@ -12,21 +12,22 @@
   <p>In this case the object passed as an argument, will be mapped based on the mapping object. Consider the following example:</p>
   <code>y.set("_dl", [{a: {b: {c: "x"}}}, {foo: "a.b.c"}]);</code>
   <p>In this case we want to extract a value from the data layer object by following the path <code>"a.b.c"</code>. This value will be sent to the server as <code>foo=x</code>.</p>
-  <script type = "text/javascript">
-    (function(y, l, d, r) {
-      y['YieldrTrackingObject'] = r;
-      y[r] = y[r] || {
+  <script type="text/javascript">
+    (function(y, i, e, l, d, r) {
+      y.YieldrTrackingObject = l;
+      y[l] = y[l] || {
         data: {},
         set: function(name, value) {
           this.data[name] = value;
         }
       };
-      if (!y[r].loaded) {
-        var s = l.createElement("script");
-        s.async = true;
-        s.src = d;
-        l.getElementsByTagName("head")[0].appendChild(s);
-        y[r].loaded = true;
+      if (!y[l].loaded) {
+        d = i.createElement("script");
+        d.src = i.location.protocol + e;
+        d.async = true;
+        r = i.getElementsByTagName("script")[0];
+        r.parentNode.insertBefore(d, r);
+        y[l].loaded = true;
       }
     })(window, document, "../../lib/y.js", "y");
 
