--- a/examples/frames/index.html
+++ b/examples/frames/index.html
@@ -9,23 +9,24 @@
   <h1>Frames Example</h1>
   <p>In this example we'll call y.js from both the parent window and inside an iframe</p>
 
-  <script type = "text/javascript">
-    (function(y, l, d, r) {
-      y['YieldrTrackingObject'] = r;
-      y[r] = y[r] || {
+  <script type="text/javascript">
+    (function(y, i, e, l, d, r) {
+      y.YieldrTrackingObject = l;
+      y[l] = y[l] || {
         data: {},
         set: function(name, value) {
           this.data[name] = value;
         }
       };
-      if (!y[r].loaded) {
-        var s = l.createElement("script");
-        s.async = true;
-        s.src = d;
-        l.getElementsByTagName("head")[0].appendChild(s);
-        y[r].loaded = true;
+      if (!y[l].loaded) {
+        d = i.createElement("script");
+        d.src = i.location.protocol + e;
+        d.async = true;
+        r = i.getElementsByTagName("script")[0];
+        r.parentNode.insertBefore(d, r);
+        y[l].loaded = true;
       }
-    })(window, document, "/lib/y.js", "yldr");
+    })(window, document, "../../lib/y.js", "y");
 
     yldr.set("advertiser_id", 7);
   </script>
