--- a/examples/basic/index.html
+++ b/examples/basic/index.html
@@ -12,21 +12,22 @@
   <p>For a successful tracking call, either a (pixel) <code>id</code> or an <code>advertiser_id</code> must be present.</p>
   <p>The Yieldr tracking pixel groups users for use in A-B tests. The users are marked using a cookie and the ab group they belong to is transmitted to the server.</p>
 
-  <script type = "text/javascript">
-    (function(y, l, d, r) {
-      y['YieldrTrackingObject'] = r;
-      y[r] = y[r] || {
+  <script type="text/javascript">
+    (function(y, i, e, l, d, r) {
+      y.YieldrTrackingObject = l;
+      y[l] = y[l] || {
         data: {},
         set: function(name, value) {
           this.data[name] = value;
         }
       };
-      if (!y[r].loaded) {
-        var s = l.createElement("script");
-        s.async = true;
-        s.src = d;
-        l.getElementsByTagName("head")[0].appendChild(s);
-        y[r].loaded = true;
+      if (!y[l].loaded) {
+        d = i.createElement("script");
+        d.src = i.location.protocol + e;
+        d.async = true;
+        r = i.getElementsByTagName("script")[0];
+        r.parentNode.insertBefore(d, r);
+        y[l].loaded = true;
       }
     })(window, document, "../../lib/y.js", "y");
 
